# API/Controllers/ApiController.cs
@@ -5,22 +5,57 @@ using EdgeApi.DataAccess;
 using EdgeApi.POCO;
 using System;
 
-
 namespace EdgeApi_API.Controllers
 {
     [ApiController]
-    [Authorize]
+    [Authorize] //Indicar que la función usara autenticacion JWT
     public class ApiController : ControllerBase
     {
+        /// <summary>
+        /// Obtiene todos los posts.
+        /// </summary>
         [HttpGet]
         [Route("api/GetAllPosts")]
-        public IActionResult GetAllPosts()
+        
+        [ProducesResponseType(StatusCodes.Status200OK, Type = typeof(Response))]
+        [ProducesResponseType(StatusCodes.Status500InternalServerError, Type = typeof(Response))]
+        public IActionResult GetAllPosts() 
         {
             Response response = new Response();
 
             try
             {
                 response = PostsAccess.GetAllPosts();
+
+                if (response.ErrorCode == EdgeApi.ErrorCode.NoError)
+                    return Ok(response);
+                else
+                    throw new Exception(response.ErrorMessage);
+            }
+            catch (Exception ex)
+            {
+                response.ErrorCode = EdgeApi.ErrorCode.Other;
+                response.ErrorMessage = ex.Message;
+                return StatusCode(StatusCodes.Status500InternalServerError, response);
+            }
+        }
+
+        /// <summary>
+        /// Obtiene un post por ID.
+        /// </summary>
+        /// <param name="postId">Número de id del post (0,100)</param>
+        [HttpGet]
+        [Route("api/GetPostById/{postId}")]
+        [ProducesResponseType(StatusCodes.Status200OK, Type = typeof(Response))]
+        [ProducesResponseType(StatusCodes.Status400BadRequest, Type = typeof(Response))]
+        [ProducesResponseType(StatusCodes.Status500InternalServerError, Type = typeof(Response))]
+        public IActionResult GetAllPosts(int postId)
+        {
+            Response response = new Response();
+
+            try
+            {
+                response = PostsAccess.GetPostById(postId);
 
                 if (response.ErrorCode == EdgeApi.ErrorCode.NoError)
                     return Ok(response);
